--- a/docs/workshop/workshop-2-tracing.ipynb
+++ b/docs/workshop/workshop-2-tracing.ipynb
@@ -56,9 +56,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🧵 Thread: The Future of AI Agents is Here! 🤖💡\n",
+      "\n",
+      "1/ Have you heard about AI agents? 🌐 These are not your regular chatbots. The latest innovation in AI is taking the tech world by storm, and Microsoft is leading the charge! 🚀 Let's dive in! #AI #TechTrends\n",
+      "\n",
+      "2/ An AI agent is a software that can interact with its environment, collect data, and perform tasks to meet goals set by humans. Think of them as intelligent assistants that can handle complex tasks autonomously. 💼✨ #ArtificialIntelligence\n",
+      "\n",
+      "3/ Microsoft has heavily invested in these autonomous AI agents to go beyond simple chatbots, integrating them into business processes at scale. Imagine AI handling customer service, sales, and even supply chain tasks efficiently! 📞🛒🚚 #Innovation\n",
+      "\n",
+      "4/ The best part? These AI agents can remember past interactions and improve over time. They have the power to learn and get better, providing a seamless and smart experience. 🎓🔁 The future is bright, and AI agents are here to stay! #FutureTech #AIRevolution\n",
+      "\n",
+      "What excites you the most about AI agents? Share your thoughts below! ⬇️👀\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "import os\n",
@@ -158,7 +176,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
